--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <ul>
-        <li> <a href="#Sobre mi ">Sobre mi </a></li>
-        <li> <a href="#servicios ">Servicios </a></li>
-        <li> <a href="#Cotácto">Contácto </a></li>
+      <li><a href="#Sobre mi ">Sobre mi </a></li>
+      <li><a href="#servicios ">Servicios </a></li>
+      <li><a href="#Cotácto">Contácto </a></li>
     </ul>
-    <h1>Websightcode</h1>
-    <p>Página creada con código  </p>
-    <img src="./img/Recurso-2.png" alt="Logo" width="200">
-    <h2>HTML</h2>
-    <p> websightcode creada en código html, css y JS </p>
-    <p> Parte de este proyecto es interactuar udando líneas de código en lugar de Wordpress</p>
-    <img src="./img/html logo.png" alt="html logo ">
-    <h2>CSS</h2>
-    <p>En este proyecyo involucraremos estilos y animaciones con css</p>
-    <img src="./img/Sin título.png" alt="css logo">
-    <h2> Javascript</h2>
-    <p>A la vez, incluiremos código JavaScript oara ciertas interacciones</p>
-    <img src="./img/jslogo.png" alt="JSlogo">
+    <section>
+      <div>Empty block</div>
+      <h1>Websightcode</h1>
+      <p>Página creada con código</p>
+      <img src="./img/Recurso-2.png" alt="Logo" width="200" />
+    </section>
+
+    <section>
+         <article>
+            <figure>
+                <img src="./img/html logo.png" alt="html logo" />
+            </figure>
+            <h2>HTML</h2>
+         <p>websightcode creada en código html, css y JS</p>
+         <p>
+         Parte de este proyecto es interactuar udando líneas de código en lugar
+         de Wordpress
+         </p>
+         </article>
+      <img src="./img/html logo.png" alt="html logo " />
+     </article>
+    </section>
+    <section>
+      <article></article>
+      <h2>CSS</h2>
+      <p>En este proyecyo involucraremos estilos y animaciones con css</p>
+      <img src="./img/Sin título.png" alt="css logo" />
+    </section>
+    <section>
+      <h2>Javascript</h2>
+      <p>A la vez, incluiremos código JavaScript oara ciertas interacciones</p>
+      <img src="./img/jslogo.png" alt="JSlogo" />
+    </section>
     <p></p>
 
     <a href="https://websightcode.com/">Más de websightcode</a>
-</body>
+
+    <a href="malito:carlagular800@gmail.com">carlagular800@gmail.com</a>
+  </body>
 </html>
