--- a/index.html
+++ b/index.html
@@ -8,47 +8,73 @@
   </head>
   <body>
     <ul>
-      <li><a href="#Sobre mi ">Sobre mi </a></li>
-      <li><a href="#servicios ">Servicios </a></li>
-      <li><a href="#Cotácto">Contácto </a></li>
+      <li><a href="#sobre mi">Sobre mi </a></li>
+      <li><a href="#servicios">Servicios </a></li>
+      <li><a href="#contacto">Contácto </a></li>
     </ul>
-    <section>
-      <div>Empty block</div>
-      <h1>Websightcode</h1>
-      <p>Página creada con código</p>
-      <img src="./img/Recurso-2.png" alt="Logo" width="200" />
+    <section id="sobre mi">
+      <article>
+        <div>
+          Empty block
+        </div>
+        <div>
+          websigrhcode.com 
+        </div>
+        <div>
+          <p>
+            página creada con código js, html y css
+          </p>
+          <img src="./img/Recurso-2.png" alt="logoWSD" width="200">
+        </div>
+      </article>
     </section>
-
-    <section>
+    <section id="servicios">
          <article>
-            <figure>
-                <img src="./img/html logo.png" alt="html logo" />
+            <div>
+              <h2>HTML</h2>
+              <p>websightcode creada en código html, css y JS</p>
+              <p>
+              Parte de este proyecto es interactuar udando líneas de código en lugar
+              de Wordpress
+              <figure>
+                <img src="./img/html logo.png" alt="html"/>
             </figure>
-            <h2>HTML</h2>
-         <p>websightcode creada en código html, css y JS</p>
-         <p>
-         Parte de este proyecto es interactuar udando líneas de código en lugar
-         de Wordpress
-         </p>
+              </p>
+            </div>
          </article>
-      <img src="./img/html logo.png" alt="html logo " />
-     </article>
     </section>
     <section>
-      <article></article>
-      <h2>CSS</h2>
-      <p>En este proyecyo involucraremos estilos y animaciones con css</p>
-      <img src="./img/Sin título.png" alt="css logo" />
+      <article>
+         <div>
+           <h2>CSS</h2>
+           <p>Estilos reaizados con css</p>
+           <p>
+           Parte de este proyecto es interactuar udando líneas de código en lugar
+           de Wordpress
+           </p>
+           <figure>
+            <img src="./img/Sin título.png" alt="css logo" />
+        </figure>
+         </div>
+      </article>
+      <section>
+        <article>
+           <div>
+             <h2>javascript</h2>
+             <p>Integraremos interacciones con lenguaje de javascript básico</p>
+             <p>
+             Parte de este proyecto es interactuar udando líneas de código en lugar
+             de Wordpress
+             </p>
+             <figure>
+              <img src="./img/jslogo.png" alt="js logo" />
+          </figure>
+           </div>
+    <div></div>
+    <section id="contacto">
+      <a href="https://websightcode.com/">Más de websightcode</a>
+      <div></div>
+      <a href="mailto:carlagular800@gmail.com">carlagular800@gmail.com</a>
     </section>
-    <section>
-      <h2>Javascript</h2>
-      <p>A la vez, incluiremos código JavaScript oara ciertas interacciones</p>
-      <img src="./img/jslogo.png" alt="JSlogo" />
-    </section>
-    <p></p>
-
-    <a href="https://websightcode.com/">Más de websightcode</a>
-
-    <a href="malito:carlagular800@gmail.com">carlagular800@gmail.com</a>
   </body>
 </html>
